--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   },
   "require": {
     "php": ">=8.1",
-    "symfony/framework-bundle": "^6.4"
+    "symfony/http-client": "^6.4"
   },
   "extra": {
     "branch-alias": {
